@@ -19,6 +19,8 @@
 			<label index="warning_duplicateMarkers">The following markers appear in several manuals or several times in the same manual:</label>
 			<label index="updateWarnings">Update warnings</label>
 			<label index="rebuildExplanation">Rebuilding the online help will totally wipe the online help database before parsing the TypoScript help for loaded extensions. We suggest you to have doc_core_tsref and doc_core_tsconfig installed to have them parsed as well.</label>
+			<label index="adminAccessOnly">Access to this function of the module is restricted to admins.</label>
+			<label index="noRebuildOnWindows">The Rebuild function does not run on Windows systems. Sorry!</label>
 		</languageKey>
 	</data>
 </T3locallang>
